# YampaSynth

./: .travis.yml  BENCHMARKS  LICENSE  README  TODO  YampaSynth.cabal
demo/: Main.hs
gui/: YampaSynth.glade
mid/: anthem.mid  bolt.mid  come-tog.mid  drum.mid  greenday.mid  guitars.mid  joplin.mid  mozart.mid
src/: MidiSynth.hs  SynthBasics.hs  SynthParams.hs
src/Main/: Gtk.hs  OpenAL.hs  Wav.hs
src/Player/: Gtk.hs  OpenAL.hs  Wav.hs
